--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,6 @@
 include:
   - docs
 permalink: pretty
+github_repo: https://github.com/MonikaBarget/atr-historical-research
+impressum: "Dr. Monika Barget - Maastricht University - 2025"
+
