--- a/_config.yml
+++ b/_config.yml
@@ -4,3 +4,6 @@ permalink: pretty
 github_repo: https://github.com/MonikaBarget/atr-historical-research
 impressum: "Dr. Monika Barget - Maastricht University - 2025"
 
+exclude:
+  - node_modules
+  - vendor
